# General_SRE_Challenge_K8S_Ansible

./: .gitignore  README.md  documentation.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci-cd.yml  deploy.yml
application/api/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
application/api/app/: main.py
application/api/app/core/: config.py
application/api/app/db/: database.py
application/api/app/db/migrations/: env.py
application/api/app/db/migrations/versions/: af524d53557e_initial_migration.py
application/api/app/models/: ip.py
application/api/app/routers/: geolocate.py
application/api/app/schemas/: ip.py
application/api/app/services/: ip_service.py
application/api/tests/: test_app.py  test_geolocate.py  test_ip_service.py
application/database/: README.md  postgres-cluster.yaml  postgres-secret.yaml  postgres-secret.yaml.example  postgres-service.yaml
application/helm/: Chart.yaml  values.yaml
application/k8s/: configmap.yaml  deployment.yaml  service.yaml
docs/: General_SRE_Chanllenge_K8S_Ansible.md
gitops/: api-app.yaml  monitoring-app.yaml
infrastructure/ansible/: README.md  ansible.cfg  deploy-monitoring.yml  deploy-postgres.yml  init-cluster.yml  install-containerd.yml  install-kube.yml  inventory.ini  inventory_template.ini.j2  join-workers.yml  provision-infrastructure.yml  setup-cluster.yml
infrastructure/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
monitoring/: README.md  alloy-values.yaml  api-dashboard-configmap.yaml  api-dashboard.json  grafana-values.yaml
(+25 files in other folders)
